--- a/note_app/style.css
+++ b/note_app/style.css
@@ -89,7 +89,7 @@ cursor: pointer;
     transform-origin: bottom right;
     transition: transform 0.2s ease;
 }
-.settings:hover .menu{
+.settings.show .menu{
     transform: scale(1);
 }
 .settings .menu li{
