--- a/note_app/style.css
+++ b/note_app/style.css
@@ -51,6 +51,10 @@ body{
     flex-direction: column;
     justify-content: space-around;
 }
+.note .details{
+    max-height:165px;
+    overflow-y: auto;
+}
 .note p{
     font-size: 22px;
     font-weight: 500;
